@@ -1,3 +1,6 @@
+Upcoming:
+- Added a few more 1.16 mods to the spawner configuration
+
 3.0.1-beta:
 - Spawner configuration is now a server config (located in <world>/serverconfig/rftoolsutility-mobdata.toml)
 
